# intelligent-banking-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.agents/: operating-model.md
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/api/: inbound.py  outbound_mcp.py
app/graph/: __init__.py  conversation_context.py  state.py  workflow.py
app/mcp/: __init__.py  server.py
app/schemas/: auth.py  harness.py  messages.py  outbound.py
app/security/: __init__.py  guardrails.py  identity.py  internal_tools.py  rbac.py  request_credentials.py  target_resolution.py
app/services/: __init__.py  agent_planner.py  audit_log.py  checkpoint_store.py  customer_support.py  harness.py  intent_router.py  internal_systems.py  knowledge_base.py  mcp_registry.py  mock_bank.py  observability.py  orchestrator.py  prompt_registry.py  response_builder.py  social_conversation.py  trace_store.py
app/services/knowledge/: __init__.py  answers.py  catalog.py  (+11 more)
docs/: ARQUITETURA.md  ARQUITETURA_AWS.md  GUIA_DEMO.md
frontend/: __init__.py  customer_chat.py  ops_dashboard.py  streamlit_app.py  ui_common.py
knowledge/catalog/: products.json  tariff_auxiliary.json  tariff_entries.json  tariff_inventory.json  tariff_reconciliation.json
prompts/: manifest.json
scripts/: __init__.py  build_tariff_inventory.py  render_tariff_auxiliary_sql.py  smoke_mcp_client.py
tests/: conftest.py  test_agent_planner.py  test_curated_knowledge.py  test_smoke_backend.py  test_tariff_inventory.py  test_tariff_schema.py
(+2 files in other folders)
