[project]
name = "intelligent-banking-agent"
version = "0.1.0"
description = "Itaú intelligent banking agent demo with FastAPI, LangGraph-oriented harness, and stateful mocks."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "pydantic-settings>=2.11.0,<3.0.0",
  "streamlit>=1.47.0,<2.0.0",
  "langgraph>=0.6.0,<1.0.0",
  "langsmith>=0.4.0,<1.0.0",
  "openai>=1.100.0,<2.0.0",
  "mcp>=1.27.0,<2.0.0",
  "pypdf>=5.0.0,<7.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0,<9.0.0",
  "httpx>=0.28.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "frontend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
